--- a/index.html
+++ b/index.html
@@ -14,11 +14,24 @@
             <img src='https://images.pexels.com/photos/3777200/pexels-photo-3777200.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500' width="50px" height="50px">
         </div>
         <div class="add-button">
-            <button class="the-button">+</button>
+            <button class="the-button"onclick="startForm()">+</button>
         </div>
     </div>
     <div class="main-content">
         
+    </div>
+    <div class="form-popup" id="popUpForm">
+        <form action="#" class="container-form">
+            <input class='inputs'type="text" id="title" placeholder="Title">
+            <input class='inputs'type="text" id="author" placeholder="Author">
+            <input class='inputs'type="number" id="pages" placeholder="Pages">
+            <input type="checkbox" id="readOption" name="readOption">
+            <label for="readOption">Have you read it?</label>
+            <div class="button-container">
+                <button class='form-button'type="submit">Submit</button>
+                <button class='form-button'type="button" onclick="cancelForm()">Cancel</button>
+            </div>
+        </form>
     </div>
     <div class="footer">
         <p>Copywrite@MeLOL</p>
