--- a/index.html
+++ b/index.html
@@ -22,14 +22,20 @@
     </div>
     <div class="form-popup" id="popUpForm">
         <form action="#" class="container-form">
-            <input class='inputs'type="text" id="title" placeholder="Title">
-            <input class='inputs'type="text" id="author" placeholder="Author">
-            <input class='inputs'type="number" id="pages" placeholder="Pages">
-            <input type="checkbox" id="readOption" name="readOption">
-            <label for="readOption">Have you read it?</label>
+            <input class='inputs'type="text" id="title" placeholder="Title" required>
+            <input class='inputs'type="text" id="author" placeholder="Author" required>
+            <input class='inputs'type="number" id="pages" placeholder="Pages" required>
+            <div>
+                <input type="radio" id="read" name="readOption" value="read" required>
+                <label for="read">You have read it</label>
+            </div>
+            <div>
+                <input type="radio" id="notRead" name="readOption" value="notRead" required>
+                <label for="notRead">You have not read it</label>
+            </div>
             <div class="button-container">
-                <button class='form-button'type="submit">Submit</button>
-                <button class='form-button'type="button" onclick="cancelForm()">Cancel</button>
+                <button class='form-button' onclick="getValues()">Submit</button>
+                <button class='form-button'onclick="cancelForm()">Cancel</button>
             </div>
         </form>
     </div>
