the books appear,
need to make it look better and make buttons work and form not grow/ make look better

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         </div>
     </div>
     <div class="main-content">
-        
+        <div class="book-area" id="book-area">
+
+        </div>
     </div>
     <div class="form-popup" id="popUpForm">
         <form action="#" class="container-form">
