made the form look nicer
need to make card buttons work, make them look better

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <input class='inputs'type="text" id="title" placeholder="Title" required>
             <input class='inputs'type="text" id="author" placeholder="Author" required>
             <input class='inputs'type="number" id="pages" placeholder="Pages" required>
-            <div>
+            <div class='radio-buttons'>
                 <input type="radio" id="read" name="readOption" value="read" required>
                 <label for="read">You have read it</label>
             </div>
-            <div>
+            <div class='radio-buttons'>
                 <input type="radio" id="notRead" name="readOption" value="notRead" required>
                 <label for="notRead">You have not read it</label>
             </div>
