almost finished final product
need to fix cancel button bug when website first starts

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <label for="notRead">You have not read it</label>
             </div>
             <div class="button-container">
-                <button class='form-button' onclick="getValues()">Submit</button>
+                <button class='form-button' onclick="getValues(event)">Submit</button>
                 <button class='form-button'onclick="cancelForm()">Cancel</button>
             </div>
         </form>
